--- a/styly.css
+++ b/styly.css
@@ -6,7 +6,7 @@ body {
   background: linear-gradient(#615dad, #ffc8da);
   background-repeat: no-repeat;
   min-height: 100vh;
-  padding-bottom: 200px;
+  /* padding-bottom: 200px; */
   font-family: Arial, sans-serif;
   color: #ffffff;
   display: flex;
@@ -19,17 +19,25 @@ h1 {
 }
 
 .card {
-  max-width: 450px;
-  /* width: 450px; */
-  /*nechat width absolutní? 
-  margin: 0 auto; */
+  max-width: 350px;
   border: 2px solid black;
   border-radius: 10px 10px 0 0;
-  /* border-radius = shorthand for top-left, top-right, bottom-right, bottom-left */
+  text-align: center;
+  display: flex;
+  flex-direction: column;
 }
 
 .card__image {
   max-width: 100%;
+  display: block;
+}
+
+.card__infoblock {
+  background-color: #283e50;
+}
+
+.card__description {
+  padding: 0 5px 0 5px;
 }
 
 .card__buttons {
