--- a/hra/styly.css
+++ b/hra/styly.css
@@ -1,1 +1,17 @@
+* {
+  box-sizing: border-box;
+}
 
+body {
+  background: linear-gradient(#615dad, #ffc8da);
+  background-repeat: no-repeat;
+  min-height: 100vh;
+  font-family: Arial, sans-serif;
+  color: #ffffff;
+}
+
+h1 {
+  font-family: "Lobster", cursive;
+  font-size: 3rem;
+  letter-spacing: 0.16rem;
+}
