--- a/hra/styly.css
+++ b/hra/styly.css
@@ -90,6 +90,7 @@ h1 {
   border: 1px solid black;
   /* background-color: rgb(213, 209, 218); */
   background: #ffffff46;
+  cursor: pointer;
 
   aspect-ratio: 1;
   /*kvůli velikosti políček při zmenšení obrazovky*/
